<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="@dimen/padding_20dp"
    tools:context=".ui.activity.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5dp"
        android:fontFamily="sans-serif-black"
        android:paddingHorizontal="@dimen/padding_16dp"
        android:text="@string/recyclerview_restoration_state_demo"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/allow_sync"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5dp"
        android:padding="@dimen/padding_16dp"
        android:text="@string/allow_sync"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/allow_async"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5dp"
        android:padding="@dimen/padding_16dp"
        android:text="@string/allow_async"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/prevent_when_empty_sync"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5dp"
        android:padding="@dimen/padding_16dp"
        android:text="@string/prevent_when_empty_sync"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prevent_when_empty_async"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5dp"
        android:padding="@dimen/padding_16dp"
        android:text="@string/prevent_when_empty_async"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prevent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5dp"
        android:padding="@dimen/padding_16dp"
        android:text="@string/prevent"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>